# ChurchAccountingWebBackend

./: .env.default  .env.profile.default  .gitignore  Dockerfile  README.md  docker-compose.yaml  postgres_setting.sh  postgres_setting.sql  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: chore.md  docs.md  feature.md  fix.md  refactor.md  test.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 180b62c2264f_longer_hashed_password.py  1d1fe5027491_init.py  2439a7f1df16_add_refresh_token.py  29b5fe10a466_add_status_to_organization_invitation.py  2b120773bf5c_init.py  2c3ea62e1f1e_edit_file_info5.py  700528c6dd30_init.py  72dd8f8c39ed_init.py  759fce4bd0d0_edit_file_info2.py  865f774f10b3_edit_file_info4.py  889d68022a6b_connect_file_info_to_organization.py  a15f79bda8a5_init.py  b2945f8fdd74_add_file_info.py  c2954787fe46_edit_file_info3.py  c85195064f6d_edit_file_info.py  d43a2b8e44c8_init.py  e308bd309f22_init.py  e8e8434e63db_init.py
src/: main.py
src/common/database/: BaseEntity.py  __init__.py  database.py  tx_type.py
src/common/dependency_injector/: container.py
src/common/env/: config.py
src/common/env/profile/: __init__.py  base_profile_config.py  dev_profile_config.py  prod_profile_config.py  test_profile_config.py
src/common/security/: auth_util.py  jwt_util.py  mailer.py  rq.py  token_DTO.py
src/domain/member/controller/: member_controller.py
src/domain/member/dto/: __init__.py  register_form_DTO.py
src/domain/member/entity/: Member.py  RefreshToken.py  __init__.py
src/domain/member/repository/: __init__.py  member_repository.py  refresh_token_repository.py
src/domain/member/service/: auth_service.py  member_service.py
src/main/: app_setting.py  main.py
src/main/common/database/: BaseEntity.py  __init__.py  database.py  file_type.py  init_dev_data.py  member_role.py  tx_type.py  wait_for_postgres.py
src/main/common/dependency_injector/: container.py
src/main/common/enum/: file_type.py  member_role.py  status_enum.py  summary_type.py
src/main/common/env/: config.py
src/main/common/redis/: __init__.py  redis_client.py  redis_tasks.py  tasks.py  worker.py
src/main/common/security/: auth_util.py  email_token.py  jwt_util.py  member_DTO.py  rq.py
src/tests/: conftest.py  test_root.py
src/tests/common/database/: init_test_data.py
static/: receipt_template.csv  receipt_template.xlsx
(+197 files in other folders)
