[project]
name = "web-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "async-asgi-testclient>=1.4.11",
    "asyncpg>=0.31.0",
    "authlib>=1.6.5",
    "boto3>=1.42.10",
    "boto3-stubs~=1.42.10",
    "dependency-injector==4.48.3",
    "email-validator>=2.3.0",
    "fakeredis>=2.33.0",
    "fastapi==0.124.0",
    "fastapi-cache2>=0.2.2",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mypy-boto3-s3>=1.42.21",
    "openpyxl>=3.1.5",
    "paginate-sqlalchemy>=0.3.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]==3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "rq>=2.6.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-stubs>=0.4",
    "sqlalchemy2-stubs>=0.0.2a38",
    "sse-starlette>=3.1.2",
    "uvicorn>=0.38.0",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
norecursedirs = ["src/main/common/env/profile"]
pythonpath = ["src/main", ".", "src/tests"]
